--- a/JobSeekingSystem/src/CreateJobGUI.form
+++ b/JobSeekingSystem/src/CreateJobGUI.form
@@ -339,6 +339,14 @@
           <grid row="16" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="38c1b" class="javax.swing.JLabel" binding="statusMessageLabel">
+        <constraints>
+          <grid row="24" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Job cannot be edited if already Advertised"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
