--- a/JobSeekingSystem/src/RegisterGUI.form
+++ b/JobSeekingSystem/src/RegisterGUI.form
@@ -229,7 +229,7 @@
               <text value="Email"/>
             </properties>
           </component>
-          <component id="43cee" class="javax.swing.JTextField" binding="emailInput">
+          <component id="43cee" class="javax.swing.JTextField" binding="userEmailText">
             <constraints>
               <grid row="8" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="200" height="30"/>
@@ -289,7 +289,7 @@
               <text value="Phone Number"/>
             </properties>
           </component>
-          <component id="af4d6" class="javax.swing.JTextField" binding="phoneInput">
+          <component id="af4d6" class="javax.swing.JTextField" binding="userPhoneText">
             <constraints>
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                 <minimum-size width="200" height="30"/>
@@ -315,11 +315,13 @@
               </grid>
             </constraints>
           </hspacer>
-          <component id="f67dc" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+          <component id="f67dc" class="javax.swing.JComboBox" binding="locationSelect">
             <constraints>
               <grid row="11" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <model/>
+            </properties>
           </component>
         </children>
       </grid>
