--- a/JobSeekingSystem/src/AdminGUI.form
+++ b/JobSeekingSystem/src/AdminGUI.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="AdminGUI">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+    <margin top="50" left="50" bottom="50" right="50"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="500" height="409"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -45,13 +45,15 @@
               <text value="Jobs"/>
             </properties>
           </component>
-          <component id="b0543" class="javax.swing.JList" binding="list1" default-binding="true">
+          <component id="b0543" class="javax.swing.JList" binding="jobList">
             <constraints>
               <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="50"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <model/>
+            </properties>
           </component>
           <component id="51bb3" class="javax.swing.JTextArea" binding="jobDetailsText">
             <constraints>
@@ -132,6 +134,14 @@
               </grid>
             </constraints>
             <properties/>
+          </component>
+          <component id="8bf14" class="javax.swing.JButton" binding="removeJobButton" default-binding="true">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Remove Job"/>
+            </properties>
           </component>
         </children>
       </grid>
