--- a/JobSeekingSystem/src/JobSeekerUpdateGUI.form
+++ b/JobSeekingSystem/src/JobSeekerUpdateGUI.form
@@ -3,14 +3,14 @@
   <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="50" left="200" bottom="200" right="200"/>
     <constraints>
-      <xy x="42" y="20" width="1286" height="808"/>
+      <xy x="42" y="20" width="1425" height="888"/>
     </constraints>
     <properties>
       <background color="-1118482"/>
     </properties>
     <border type="none"/>
     <children>
-      <grid id="2c83c" binding="updateSkillsPanel" layout-manager="GridLayoutManager" row-count="15" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="2c83c" binding="updateSkillsPanel" layout-manager="GridLayoutManager" row-count="19" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="50" left="50" bottom="50" right="50"/>
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
@@ -31,7 +31,7 @@
           </component>
           <component id="584ac" class="javax.swing.JLabel">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="10"/>
               </grid>
             </constraints>
@@ -42,7 +42,7 @@
           </component>
           <component id="dab96" class="javax.swing.JLabel" binding="phoneLabel">
             <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="5"/>
               </grid>
             </constraints>
@@ -62,7 +62,7 @@
           </component>
           <component id="43677" class="javax.swing.JLabel" binding="addressLabel">
             <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="-1" height="5"/>
               </grid>
             </constraints>
@@ -70,106 +70,26 @@
               <text value="Location"/>
             </properties>
           </component>
-          <component id="68869" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="20"/>
-                <preferred-size width="-1" height="20"/>
-                <maximum-size width="-1" height="20"/>
-              </grid>
-            </constraints>
-            <properties>
-              <font size="16" style="1"/>
-              <text value="Update Skills"/>
-            </properties>
-          </component>
-          <component id="cef9f" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="10" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Your skills"/>
-            </properties>
-          </component>
           <vspacer id="8e48e">
             <constraints>
-              <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="10" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="15"/>
                 <preferred-size width="222" height="15"/>
                 <maximum-size width="-1" height="15"/>
               </grid>
             </constraints>
           </vspacer>
-          <component id="84887" class="javax.swing.JTextField" binding="jobseekerPhoneInput">
-            <constraints>
-              <grid row="3" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <maximum-size width="300" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="a9ae6" class="javax.swing.JTextField" binding="jobseekerEmailInput">
-            <constraints>
-              <grid row="4" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <maximum-size width="300" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="27e5e" class="javax.swing.JTextField" binding="jobseekerLocationInput">
-            <constraints>
-              <grid row="5" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <maximum-size width="300" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="1e539" class="javax.swing.JButton" binding="addSkillButton">
-            <constraints>
-              <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-1118482"/>
-              <font size="16" style="1"/>
-              <foreground color="-16745473"/>
-              <text value="&lt;"/>
-            </properties>
-          </component>
-          <component id="6a259" class="javax.swing.JButton" binding="removeSkillButton">
-            <constraints>
-              <grid row="12" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <background color="-1118482"/>
-              <font size="16" style="1"/>
-              <foreground color="-16745473"/>
-              <text value="&gt;"/>
-            </properties>
-          </component>
-          <component id="c0a00" class="javax.swing.JButton" binding="updateButton" default-binding="true">
-            <constraints>
-              <grid row="14" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="50" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <background color="-16745473"/>
-              <font size="12" style="1"/>
-              <foreground color="-1"/>
-              <text value="Update"/>
-            </properties>
-          </component>
           <vspacer id="a1839">
             <constraints>
-              <grid row="13" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+              <grid row="17" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
                 <minimum-size width="-1" height="10"/>
               </grid>
             </constraints>
           </vspacer>
           <scrollpane id="a24dc">
             <constraints>
-              <grid row="11" column="3" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                <maximum-size width="-1" height="300"/>
+              <grid row="15" column="3" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <maximum-size width="300" height="300"/>
               </grid>
             </constraints>
             <properties/>
@@ -183,58 +103,187 @@
               </component>
             </children>
           </scrollpane>
+          <component id="fcd1e" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="14" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Available skills"/>
+            </properties>
+          </component>
+          <component id="1e539" class="javax.swing.JButton" binding="addSkillButton">
+            <constraints>
+              <grid row="15" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1118482"/>
+              <font size="16" style="1"/>
+              <foreground color="-16745473"/>
+              <text value="&lt;"/>
+            </properties>
+          </component>
+          <component id="6a259" class="javax.swing.JButton" binding="removeSkillButton">
+            <constraints>
+              <grid row="16" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-1118482"/>
+              <font size="16" style="1"/>
+              <foreground color="-16745473"/>
+              <text value="&gt;"/>
+            </properties>
+          </component>
           <scrollpane id="b9a02">
             <constraints>
-              <grid row="11" column="0" row-span="2" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+              <grid row="15" column="1" row-span="2" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
                 <maximum-size width="-1" height="300"/>
               </grid>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="6a71e" class="javax.swing.JList" binding="userSkillList">
+              <component id="c04fc" class="javax.swing.JList" binding="userSkillList">
                 <constraints/>
                 <properties/>
               </component>
             </children>
           </scrollpane>
-          <component id="fcd1e" class="javax.swing.JLabel">
+          <component id="84887" class="javax.swing.JTextField" binding="phoneInput">
             <constraints>
-              <grid row="10" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Available skills"/>
-            </properties>
-          </component>
-          <hspacer id="cd847">
-            <constraints>
-              <grid row="1" column="0" row-span="1" col-span="4" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                <minimum-size width="-1" height="10"/>
-                <maximum-size width="500" height="-1"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="30"/>
+                <maximum-size width="300" height="30"/>
               </grid>
             </constraints>
-          </hspacer>
-          <component id="5ada5" class="javax.swing.JLabel">
-            <constraints>
-              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
             <properties>
-              <text value="Select the skill and "/>
+              <text value=""/>
             </properties>
+          </component>
+          <component id="a9ae6" class="javax.swing.JTextField" binding="emailInput">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="30"/>
+                <maximum-size width="300" height="30"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="27e5e" class="javax.swing.JTextField" binding="locationInput">
+            <constraints>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="30"/>
+                <maximum-size width="300" height="30"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
           <scrollpane id="37a03">
             <constraints>
-              <grid row="6" column="1" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="8" fill="2" indent="0" use-parent-layout="false">
+                <maximum-size width="300" height="100"/>
+              </grid>
             </constraints>
             <properties/>
             <border type="none"/>
             <children>
-              <component id="3ad64" class="javax.swing.JList" binding="locationList">
+              <component id="d5083" class="javax.swing.JList" binding="locationList">
                 <constraints/>
                 <properties/>
               </component>
             </children>
           </scrollpane>
+          <component id="f1922" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="5"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="Search your location in the list below:"/>
+            </properties>
+          </component>
+          <component id="ebee5" class="javax.swing.JLabel" binding="locationWarning">
+            <constraints>
+              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="10"/>
+              <foreground color="-4519667"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="8e3b2" class="javax.swing.JLabel" binding="emailWarning">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="10"/>
+              <foreground color="-4519667"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="58305" class="javax.swing.JLabel" binding="phoneWarning">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="10"/>
+              <foreground color="-4519667"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="68869" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="20"/>
+                <preferred-size width="-1" height="20"/>
+                <maximum-size width="-1" height="20"/>
+              </grid>
+            </constraints>
+            <properties>
+              <font size="16" style="1"/>
+              <text value="Update Skills"/>
+            </properties>
+          </component>
+          <component id="cef9f" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="14" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Your skills"/>
+            </properties>
+          </component>
+          <component id="c0a00" class="javax.swing.JButton" binding="updateButton" default-binding="true">
+            <constraints>
+              <grid row="18" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="-1" height="40"/>
+                <maximum-size width="-1" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-16745473"/>
+              <font size="12" style="1"/>
+              <foreground color="-1"/>
+              <text value="Save Changes"/>
+            </properties>
+          </component>
+          <component id="ee4c2" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="12" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Search and add skills relevant to you"/>
+            </properties>
+          </component>
+          <vspacer id="ddbee">
+            <constraints>
+              <grid row="13" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false">
+                <minimum-size width="-1" height="15"/>
+                <preferred-size width="222" height="15"/>
+                <maximum-size width="-1" height="15"/>
+              </grid>
+            </constraints>
+          </vspacer>
         </children>
       </grid>
     </children>
