--- a/JobSeekingSystem/src/RecruiterViewCandidateGUI.form
+++ b/JobSeekingSystem/src/RecruiterViewCandidateGUI.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="RecruiterViewCandidateGUI">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="candidatePanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1216" height="702"/>
@@ -28,7 +28,7 @@
             </properties>
             <border type="none"/>
             <children>
-              <component id="c1998" class="javax.swing.JLabel">
+              <component id="c1998" class="javax.swing.JLabel" binding="nameLabel">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -188,7 +188,7 @@
                   </grid>
                 </constraints>
               </vspacer>
-              <component id="5f182" class="javax.swing.JLabel" binding="phoneText">
+              <component id="5f182" class="javax.swing.JLabel" binding="candidatePhone">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="16"/>
@@ -198,7 +198,7 @@
                   <text value="jobseekerPhone"/>
                 </properties>
               </component>
-              <component id="3dcaf" class="javax.swing.JLabel">
+              <component id="3dcaf" class="javax.swing.JLabel" binding="candidateEmail">
                 <constraints>
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="16"/>
@@ -208,7 +208,7 @@
                   <text value="jobseekerEmail"/>
                 </properties>
               </component>
-              <component id="b68ee" class="javax.swing.JLabel">
+              <component id="b68ee" class="javax.swing.JLabel" binding="candidateLocation">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false">
                     <preferred-size width="-1" height="16"/>
